AmicarDP/src/objects/Patrimonio__c.object
<CustomObject>
    <fields>
        <fullName>Con_deuda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Con deuda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripción</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financiamiento__c</fullName>
        <label>Financiamiento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Contado</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Crédito</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Otros</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solicitud__c</fullName>
        <label>Solicitud</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Patrimonios</relationshipLabel>
        <relationshipName>Patrimonios</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VE</fullName>
                    <label>Vehículo</label>
                </value>
                <value>
                    <fullName>MA</fullName>
                    <label>Maquinaria</label>
                </value>
                <value>
                    <fullName>PS</fullName>
                    <label>Participación Sociedad</label>
                </value>
                <value>
                    <fullName>BR</fullName>
                    <label>Bienes Raíces</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor_venta__c</fullName>
        <label>Valor venta</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Patrimonio</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Código de patrimonio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patrimonios</pluralLabel>
    <recordTypes>
        <fullName>PROPERTY</fullName>
        <active>false</active>
        <label>Propiedad</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>